--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 # Logs
 logs
-*.log
-npm-debug.log*
+.log
+npm-debug.log
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependencies
+**/node_modules
+**/dist
+**/dist-ssr
 *.local
 
 # Editor directories and files
@@ -18,7 +19,7 @@ dist-ssr
 .idea
 .DS_Store
 *.suo
-*.ntvs*
+.ntvs
 *.njsproj
 *.sln
 *.sw?
