--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -8,12 +8,14 @@
     "composite": true,
     "allowSyntheticDefaultImports": true,
 
+    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
     "noEmit": true,
 
+    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
