feat update integration data with API

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 DATABASE_URL="postgresql://lostandfound:lostandfound@localhost:5432/postgres"
 CLOUDINARY_URL="cloudinary://723959214686972:D0ReZnh8BfPoVG2lmxEQc02yRqw@dywgs2bl0"
+
+PORT= 2006
