--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,79 @@
-# Logs
-logs
-.log
-npm-debug.log
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# filepath: d:\Study\Cakrawala University\Semester 3\Web Application Development\Code\Prokhir-11\.gitignore
 
 # Dependencies
-**/node_modules
-**/dist
-**/dist-ssr
-*.local
+**/node_modules/
+**/bun.lockb
+**/bun.lock
+**/.pnp
+**/.pnp.js
+
+# Testing
+**/coverage/
+
+# Production builds
+**/build/
+**/dist/
+
+# Environment variables
+**/.env
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+**/*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Temporary folders
+tmp/
+temp/
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
+.vscode/
+.idea/
 *.suo
-.ntvs
+*.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Uploads
+uploads/
+public/uploads/
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# TypeScript
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
